--- a/main.html
+++ b/main.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Fibonacci Calculator</title>
+  <script src="script.js" defer></script>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1>Fibonacci Calculator</h1>
+
+  <label for="fibonacciInput">Enter a Number (N):</label>
+  <input type="number" id="fibonacciInput" placeholder="Enter a number" required><br>
+
+  <button onclick="calculateFibonacci()">Calculate Fibonacci</button>
+
+  <div id="result"></div>
 
 </body>
-
 </html>
+
